Lower the minimum version requirement for JDK to 1.8