@@ -2,16 +2,21 @@
 
 package com.apple.itunes.storekit.offers;
 
+import org.apache.commons.io.IOUtils;
 import org.junit.jupiter.api.Test;
 
 import java.io.InputStream;
+import java.util.Objects;
 
 class PromotionalOfferSignatureCreatorTest {
 
     @Test
     void testConstructor() throws Exception {
         try (InputStream key = this.getClass().getClassLoader().getResourceAsStream("testSigningKey.p8")) {
-            new PromotionalOfferSignatureCreator(new String(key.readAllBytes()), "keyId", "bundleId");
+            if (Objects.nonNull(key)) {
+                new PromotionalOfferSignatureCreator(new String(IOUtils.toByteArray(key)), "keyId", "bundleId");
+            }
+
         }
     }
 
